--- a/vms.html
+++ b/vms.html
@@ -7,7 +7,7 @@
 
 <body>
     <header>
-        VMS / logo / profile / logout
+        <h1>Vehicle Entry Management System</h1>
     </header>
 
     <!-- main is a flex with 2 columns: -->
@@ -38,92 +38,187 @@
             <!-- buildingsvg + buildingtitle -->
             <div id=building>
                 <div id="buildingsvg">
-                    <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
-                        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-                        xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="80" height="80"
-                        viewBox="0 0 26.458333 26.458334" version="1.1" id="svg8"
-                        inkscape:version="0.92.4 (5da689c313, 2019-01-14)" sodipodi:docname="building.svg">
-                        <defs id="defs2" />
-                        <sodipodi:namedview id="base" pagecolor="#ffffff" bordercolor="#666666" borderopacity="1.0"
-                            inkscape:pageopacity="0.0" inkscape:pageshadow="2" inkscape:zoom="3.959798"
-                            inkscape:cx="33.374384" inkscape:cy="45.714285" inkscape:document-units="mm"
-                            inkscape:current-layer="layer1" showgrid="false" units="px" inkscape:window-width="1366"
-                            inkscape:window-height="706" inkscape:window-x="-8" inkscape:window-y="-8"
-                            inkscape:window-maximized="1" />
-                        <metadata id="metadata5">
-                            <rdf:RDF>
-                                <cc:Work rdf:about="">
-                                    <dc:format>image/svg+xml</dc:format>
-                                    <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-                                    <dc:title></dc:title>
-                                </cc:Work>
-                            </rdf:RDF>
-                        </metadata>
-                        <g inkscape:label="Layer 1" inkscape:groupmode="layer" id="layer1"
-                            transform="translate(0,-270.54165)">
-                            <rect
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.52916667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4518" width="14.409814" height="25.768766" x="0.37886614" y="270.98599" />
-                            <rect
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.52916667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4541" width="2.9636178" height="2.0974476" x="2.2993343" y="272.22391" />
-                            <rect
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.52916667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4541-7" width="2.9636178" height="2.0974476" x="10.572765" y="272.22391" />
-                            <rect
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.52916667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4541-75" width="2.9636178" height="2.0974476" x="7.609148" y="272.22391" />
-                            <rect
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.52916667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4541-6" width="2.9636178" height="2.0974476" x="2.2993343" y="275.93225" />
-                            <rect
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.52916667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4541-7-1" width="2.9636178" height="2.0974476" x="10.572765" y="275.93225" />
-                            <rect
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.52916667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4541-75-0" width="2.9636178" height="2.0974476" x="7.609148" y="275.93225" />
-                            <rect
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.52916667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4541-66" width="2.9636178" height="2.0974476" x="2.2993343" y="279.4736" />
-                            <rect
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.52916667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4541-7-3" width="2.9636178" height="2.0974476" x="10.572765" y="279.4736" />
-                            <rect
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.52916667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4541-75-5" width="2.9636178" height="2.0974476" x="7.609148" y="279.4736" />
-                            <path
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.5291667;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                d="m 25.657875,294.87 -14.56619,0.0586 c 0,0 -0.534539,-2.28659 0.668174,-3.04878 0,0 0.601355,-1.96226 1.135895,-2.13816 0,0 0.467723,-0.70066 1.069079,-0.87655 0.601357,-0.17589 3.407686,-0.2686 4.276312,-0.2686 0.868626,0 2.605878,-0.20177 3.0736,0.56043 0.467721,0.7622 1.336347,2.13657 1.603617,2.3711 0.267269,0.23452 1.5368,-0.0586 2.338608,0.64493 0.801809,0.70356 0.400905,2.697 0.400905,2.697 z"
-                                id="path4595" inkscape:connector-curvature="0" sodipodi:nodetypes="ccccssscccc" />
-                            <ellipse
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.5291667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="path4524" cx="13.772034" cy="294.96204" rx="1.7668346" ry="1.7257739" />
-                            <ellipse
-                                style="fill:#f9f9f9;fill-opacity:1;stroke:#484543;stroke-width:0.5291667;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="path4524-9" cx="22.175716" cy="294.96204" rx="1.7668346" ry="1.7257739" />
-                            <path
-                                style="fill:none;stroke:#484543;stroke-width:0.46858275;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                d="m 17.172067,289.93473 0.06682,1.5194 3.541321,2e-5 c 0,0 -0.06682,-1.59154 -0.53454,-1.74871 -0.467721,-0.15719 -3.073599,0.2293 -3.073599,0.2293 z"
-                                id="path4614" inkscape:connector-curvature="0" sodipodi:nodetypes="cccccc" />
-                            <path
-                                style="fill:none;stroke:#484543;stroke-width:0.46858275;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                d="m 15.665485,289.93472 -0.03895,1.51941 -2.06399,10e-6 c 0,0 -0.03894,-1.25744 0.23366,-1.41462 0.272602,-0.15719 1.869274,-0.10479 1.869274,-0.10479 z"
-                                id="path4614-1" inkscape:connector-curvature="0" sodipodi:nodetypes="cccccc" />
-                        </g>
-                    </svg>
+                    <!-- <svg
+                    xmlns:dc="http://purl.org/dc/elements/1.1/"
+                    xmlns:cc="http://creativecommons.org/ns#"
+                    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                    xmlns:svg="http://www.w3.org/2000/svg"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+                    xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+                    width="100"
+                    height="100"
+                    viewBox="0 0 26.458333 26.458334"
+                    version="1.1"
+                    id="svg8"
+                    inkscape:version="0.92.4 (5da689c313, 2019-01-14)"
+                    sodipodi:docname="building2.svg">
+                   <defs
+                      id="defs2" />
+                   <sodipodi:namedview
+                      id="base"
+                      pagecolor="#ffffff"
+                      bordercolor="#666666"
+                      borderopacity="1.0"
+                      inkscape:pageopacity="0.0"
+                      inkscape:pageshadow="2"
+                      inkscape:zoom="3.959798"
+                      inkscape:cx="33.374384"
+                      inkscape:cy="34.981633"
+                      inkscape:document-units="mm"
+                      inkscape:current-layer="layer1"
+                      showgrid="false"
+                      units="px"
+                      inkscape:window-width="1366"
+                      inkscape:window-height="706"
+                      inkscape:window-x="-8"
+                      inkscape:window-y="-8"
+                      inkscape:window-maximized="1" />
+                   <metadata
+                      id="metadata5">
+                     <rdf:RDF>
+                       <cc:Work
+                          rdf:about="">
+                         <dc:format>image/svg+xml</dc:format>
+                         <dc:type
+                            rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+                         <dc:title></dc:title>
+                       </cc:Work>
+                     </rdf:RDF>
+                   </metadata>
+                   <g
+                      inkscape:label="Layer 1"
+                      inkscape:groupmode="layer"
+                      id="layer1"
+                      transform="translate(0,-270.54165)">
+                     <circle
+                        style="fill:#79b1d7;fill-opacity:1;stroke:#000000;stroke-width:0.529;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="path4561"
+                        cx="13.5"
+                        cy="283.49997"
+                        r="12.158631" />
+                     <rect
+                        style="fill:#00ff00;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="rect4518"
+                        width="8.4527941"
+                        height="16.884678"
+                        x="6.9611044"
+                        y="274.69305" />
+                     <rect
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="rect4541"
+                        width="1.7384577"
+                        height="1.3743277"
+                        x="8.0876503"
+                        y="275.50418" />
+                     <rect
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="rect4541-7"
+                        width="1.7384577"
+                        height="1.3743277"
+                        x="12.940844"
+                        y="275.50418" />
+                     <rect
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="rect4541-75"
+                        width="1.7384577"
+                        height="1.3743277"
+                        x="11.202386"
+                        y="275.50418" />
+                     <rect
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="rect4541-6"
+                        width="1.7384577"
+                        height="1.3743277"
+                        x="8.0876503"
+                        y="277.93402" />
+                     <rect
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="rect4541-7-1"
+                        width="1.7384577"
+                        height="1.3743277"
+                        x="12.940844"
+                        y="277.93402" />
+                     <rect
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="rect4541-75-0"
+                        width="1.7384577"
+                        height="1.3743277"
+                        x="11.202386"
+                        y="277.93402" />
+                     <rect
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="rect4541-66"
+                        width="1.7384577"
+                        height="1.3743277"
+                        x="8.0876503"
+                        y="280.25446" />
+                     <rect
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="rect4541-7-3"
+                        width="1.7384577"
+                        height="1.3743277"
+                        x="12.940844"
+                        y="280.25446" />
+                     <rect
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="rect4541-75-5"
+                        width="1.7384577"
+                        height="1.3743277"
+                        x="11.202386"
+                        y="280.25446" />
+                     <path
+                        style="fill:#ff2a2a;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        d="m 21.789766,290.34276 -8.544524,0.0384 c 0,0 -0.313561,-1.49826 0.39195,-1.99767 0,0 0.352755,-1.28575 0.666316,-1.40101 0,0 0.274366,-0.4591 0.627122,-0.57435 0.352756,-0.11525 1.998948,-0.17599 2.508484,-0.17599 0.509535,0 1.528607,-0.13221 1.802973,0.36721 0.274365,0.49942 0.783901,1.39996 0.940681,1.55364 0.15678,0.15366 0.901487,-0.0384 1.371827,0.42258 0.470341,0.461 0.235171,1.76718 0.235171,1.76718 z"
+                        id="path4595"
+                        inkscape:connector-curvature="0"
+                        sodipodi:nodetypes="ccccssscccc" />
+                     <ellipse
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="path4524"
+                        cx="14.817533"
+                        cy="290.40308"
+                        rx="1.0364249"
+                        ry="1.1307929" />
+                     <ellipse
+                        style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.52916664;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        id="path4524-9"
+                        cx="19.747133"
+                        cy="290.40308"
+                        rx="1.0364249"
+                        ry="1.1307929" />
+                     <path
+                        style="fill:#ffffff;stroke:#000000;stroke-width:0.26458332;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        d="m 16.615403,286.848 0.05079,1.25654 2.691808,2e-5 c 0,0 -0.309808,-1.20569 -0.665331,-1.33567 -0.355521,-0.13 -2.077266,0.0792 -2.077266,0.0792 z"
+                        id="path4614"
+                        inkscape:connector-curvature="0"
+                        sodipodi:nodetypes="cccccc" />
+                     <path
+                        style="fill:#ffffff;stroke:#000000;stroke-width:0.26458332;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        d="m 16.615411,286.84799 -0.03557,1.25655 -1.88457,1e-5 c 0,0 -0.03556,-1.0399 0.213348,-1.16989 0.248905,-0.12999 1.706781,-0.0867 1.706781,-0.0867 z"
+                        id="path4614-1"
+                        inkscape:connector-curvature="0"
+                        sodipodi:nodetypes="cccccc" />
+                     <path
+                        style="fill:#ffffff;stroke:#000000;stroke-width:0.52822918;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+                        d="M 4.6772641,291.78821 22.450592,291.65462"
+                        id="path4582"
+                        inkscape:connector-curvature="0"
+                        sodipodi:nodetypes="cc" />
+                   </g>
+                 </svg> -->
                 </div>
                 <div id="buildingtitle">
-                    <h1>Building 101</h1>
+                    <h2>Building 101</h2>
                 </div>
 
             </div>
 
             <!-- listcont is a flex container with 3 rows: -->
-            <!-- tablecont + tablefunctioncont -->
+            <!-- listtitle + tablecont + tablefunctioncont -->
             <div id="listcont">
 
+                <div id="listtitle"></div>
                 <!-- tablecont toggles display between: -->
                 <!-- - tablelist + tableblacklist (vertical) -->
                 <!-- - tablelist + userprofit (horizontal) -->
@@ -138,9 +233,9 @@
                         <h2>Current User Details</h2>
                     </div>
                     <div id="newuser">
-                            <h1>New User</h1>
-                            <h2>New User Profile</h2>
-                        </div>
+                        <h1>New User</h1>
+                        <h2>New User Profile</h2>
+                    </div>
                 </div>
 
                 <!-- not using pagecontrol -->
@@ -158,6 +253,9 @@
                     </div>
                     <div class=tablefunction id="tablefncExport">
                         Export List
+                    </div>
+                    <div class=tablefunction id="tablefncHistory">
+                        History
                     </div>
                 </div>
             </div>
