--- a/index.html
+++ b/index.html
@@ -646,9 +646,9 @@
                     <div id="vsse_bodywedid">
 
                         <h1 class="vsse_bodylink">We Did:</h1>
-                        <div id="vsse_bodywedidbox">
+                        <div class="vsse_bodywedidbox">
 
-                            <div id="vsse_wedidvas"><a href="vas.html"><img src="vas.svg" alt="VAS"
+                            <div class="vsse_wedidprj"><a href="vas.html"><img src="vas.svg" alt="VAS"
                                         id="vsse_wedidvaslogo"></a>V-Accounting-System (VAS)</div>
                             <p>is a system that stands out
                                 in a crowded market of
@@ -717,8 +717,8 @@
                             </table>
 
                         </div>
-                        <div id="vsse_bodywedidbox2">
-                            <div id="vsse_wedidvms"><a href="vms.html"><img src="building.svg" alt="VAS"
+                        <div class="vsse_bodywedidbox">
+                            <div  class="vsse_wedidprj"><a href="vms.html"><img src="building.svg" alt="VAS"
                                         id="vsse_wedidvaslogo"></a>Vehicle Management System (VMS)
                             </div>
                         </div>
