--- a/entity.html
+++ b/entity.html
@@ -69,6 +69,7 @@
     <!-- <script type = "module" src="setting.js"></script>
         <script type = "module" src="entity.js"></script> -->
     <script src="setting_web.js"></script>
+    <script src="vssfnc.js"></script>
     <script src="entity.js"></script>
 </body>
 
