--- a/vms.html
+++ b/vms.html
@@ -264,6 +264,7 @@
     <footer>
         Copyright @2019
     </footer>
+    <script src="vssfnc.js"></script>
     <script src="vms.js"></script>
 </body>
 
