--- a/entity.html
+++ b/entity.html
@@ -4,7 +4,7 @@
 <head>
     <title>Entity</title>
     <link rel="stylesheet" type="text/css" href="vas.css">
-    <!-- <link rel="stylesheet" type="text/css" href="entity.css"> -->
+    <link rel="stylesheet" type="text/css" href="entity.css">
 </head>
 
 <body>
@@ -46,11 +46,7 @@
             </div>
 
             <div id="vas_contentdetail">
-                <form id="formdetails">
-                    Details:
-                    <div id=divdetails>
-
-                    </div>
+                <form id="formdetails" style = "width:100%; background-color:gray;">
                 </form>
             </div>
 
