--- a/entity.html
+++ b/entity.html
@@ -13,32 +13,27 @@
     </header>
 
     <!-- vas_main is a row flex with: vas_navbar + vas_content -->
-    <div id="vas_main">
+    <div id="vss_main">
 
         <!-- vas_navbar is a column flex with: vas_navbartitle + vas_navbarlist + vas_navbarfunction -->
-        <div id="vas_navbar">
+        <div id="vss_navbar">
 
+            <div id="vss_navbartitle">Entity</div>
 
-            <div id="vas_navbartitle">Entity</div>
-
-
-            <div id="vas_navbarlist">
-
-                <table id="navbartable">
-
-                </table>
-
+            <div id="vss_navbarlist">
+                <table id="navbartable"></table>
             </div>
-            <div id="vas_navbarfunction">
-                <div class = "vas_function" id="navbarbuttonget">Get</div>
-                <div class = "vas_function" id="navbarbuttonadd">Add</div>
-                <div class = "vas_function" id="navbarbuttonpdf">PDF</div>
-                <div class = "vas_function" id="navbarbuttonfull">Full List</div>
+
+            <div id="vss_navbarfunction">
+                <div class = "vss_function" id="navbarbuttonget">Get</div>
+                <div class = "vss_function" id="navbarbuttonadd">Add</div>
+                <div class = "vss_function" id="navbarbuttonpdf">PDF</div>
+                <div class = "vss_function" id="navbarbuttonfull">Full List</div>
             </div>
         </div>
 
         <!-- vas_content is a column flex with: vas_contenttitle + vas_contentdetail + vas_contentfunction -->
-        <div id="vas_content">
+        <div id="vss_content">
             <!-- form title -->
 
             <!-- detail -->
