--- a/template1page.html
+++ b/template1page.html
@@ -21,8 +21,8 @@
             <div id="vss_navbartitle">TITLE</div>
             <div id="vss_navbarlist">LIST</div>
             <div id="vss_navbarfunction">
-                <div class="vss_function">xxx</div>
-                <div class="vss_function">xxx</div>
+                <button class="vss_function">xx1</button>
+                <button class="vss_function">xx2</button>
                 <div class="vss_function">xxx</div>
                 <div class="vss_function">xxx</div>
                 <div class="vss_function">xxx</div>
@@ -48,8 +48,8 @@
             </div>
 
             <div id="vss_contentfunction">
-                <div class="vss_function">One</div>
-                <div class="vss_function">Two</div>
+                <button class="vss_function">One</button>
+                <button class="vss_function">Two</button>
                 <div class="vss_function">Three</div>
                 <div class="vss_function">xxxxx</div>
                 <div class="vss_function">xxxxx</div>
