--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 
 <head>
@@ -254,7 +254,7 @@
                                 title="Mr Daniel">
 
                         </div>
-                        <img src="car.jpg" id="vsse_bodyweareselectedcar">
+                        <img src="./img/car.jpg" id="vsse_bodyweareselectedcar">
 
                         <div id="vsse_bodyweareselected">
                             <div id="vsse_bodyweareselectedbox">
@@ -718,10 +718,17 @@
 
                         </div>
                         <div class="vsse_bodywedidbox">
-                            <div  class="vsse_wedidprj"><a href="vms.html"><img src="building.svg" alt="VAS"
-                                        id="vsse_wedidvaslogo"></a>Vehicle Management System (VMS)
+                            <div class="vsse_wedidprj"><a href="vms.html"><img src="building.svg" alt="VMS"
+                                        id="vsse_wedidvmslogo"></a>Visitor Management System (VMS)
                             </div>
                         </div>
+                        <br>
+                        <div class="vsse_bodywedidbox">
+                            <div class="vsse_wedidprj">
+                                <a href="payroll.html"><img src="./img/banner_bg5.jpg" alt="infini PAY"  id="vsse_wedidpaylogo"></a> infini PAY
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
