--- a/template1page.html
+++ b/template1page.html
@@ -20,15 +20,15 @@
         <div id="vss_navbar">
             <div id="vss_navbartitle">TITLE</div>
             <div id="vss_navbarlist">LIST</div>
-            <div id="vss_navbarfunction">
+            <div class="vss_functionwrapper" id = "vss_navbarfunction">
                 <button class="vss_function">xx1</button>
                 <button class="vss_function">xx2</button>
-                <div class="vss_function">xxx</div>
-                <div class="vss_function">xxx</div>
-                <div class="vss_function">xxx</div>
-                <div class="vss_function">xxx</div>
-                <div class="vss_function">xxx</div>
-                <div class="vss_function">xxx</div>
+                <button class="vss_function">xx3</button>
+                <button class="vss_function">xx4</button>
+                <button class="vss_function">xx5</button>
+                <button class="vss_function">xx6</button>
+                <button class="vss_function">xx7</button>
+                <button class="vss_function">xx8</button>
             </div>
         </div>
 
@@ -47,19 +47,20 @@
                 <div id="vss_contentform">FORM</div>
             </div>
 
-            <div id="vss_contentfunction">
+            <div class="vss_functionwrapper" id = "vss_contentfunction">
                 <button class="vss_function">One</button>
                 <button class="vss_function">Two</button>
-                <div class="vss_function">Three</div>
-                <div class="vss_function">xxxxx</div>
-                <div class="vss_function">xxxxx</div>
-                <div class="vss_function">xxxxx</div>
-                <div class="vss_function">Eight</div>
-                <div class="vss_function">Nine</div>
-                <div class="vss_function">Ten</div>
-                <div class="vss_function">Eleven</div>
-                <div class="vss_function">Twelve</div>
-                <div class="vss_function">Thirteen</div>
+                <button class="vss_function">Three</button>
+                <button class="vss_function">Four</button>
+                <button class="vss_function">Five</button>
+                <button class="vss_function">Six</button>
+                <button class="vss_function">Seven</button>
+                <button class="vss_function">Eight</button>
+                <button class="vss_function">Nine</button>
+                <button class="vss_function">Ten</button>
+                <button class="vss_function">Eleven</button>
+                <button class="vss_function">Twelve</button>
+                <button class="vss_function">Thirteen</button>
             </div>
         </div>
 
