--- a/entity.html
+++ b/entity.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Entity</title>
-    <link rel="stylesheet" type="text/css" href="vas.css">
+    <link rel="stylesheet" type="text/css" href="vss.css">
     <link rel="stylesheet" type="text/css" href="entity.css">
 </head>
 
