--- a/template1page.html
+++ b/template1page.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="vas.css">
+    <link rel="stylesheet" type="text/css" href="vss.css">
 </head>
 
 <!-- body: header + maintitle + main + footer -->
