--- a/vas.html
+++ b/vas.html
@@ -109,8 +109,7 @@
                         d="m 15.331659,282.46365 h 7.984748" id="path4539-0-7" inkscape:connector-curvature="0" />
                   </g>
                </svg>
-               <div>
-                  Object Oriented Navigation</div>
+               <div>Object Oriented Navigation</div>
             </div>
 
             <div class="navdiffitem" data-type="cc">
@@ -507,7 +506,7 @@
             of differential features.
          </div>
          <div id="illust_imgcont">
-            <img src="did1.png" alt="screen image">
+            <img src="./img/did1.png" alt="screen image">
          </div>
       </div>
    </div>
