--- a/infinipay.html
+++ b/infinipay.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" type="text/css" href="infinipay.css">
 </head>
 
-<!-- body contains: body + main + footer -->
+<!-- body contains: header + main + footer -->
 
 <body>
     <header class="ipheader">
-        InfiniPay - <i>endless possibilities</i>
+        <div>InfiniPay - <i>endless possibilities</i></div>
     </header>
 
     <!-- ipmain is a column flex of: mainnav + maincontent -->
@@ -25,56 +25,79 @@
                     <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
 
                     <g class="layer">
-                        <title>WHY</title>
                         <path
                             d="m192.5,116.5c36,-39 104,49 133,48c29,-1 49,-82 94,-69c45,13 62,77 57,105c-5,28 -116,143 -138,146c-22,3 -136,-93 -153,-118c-17,-25 -29,-73 7,-112z"
                             fill="#ff0000" class="vsse_navitem" id="vsse_navitem1" stroke="#f9f4f4"
                             stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
                     </g>
                 </svg>
-                Employee
+                <div>Employee</div>
+
             </div>
             <div class="mainnavitem" id="navitemsalaryitem">
                 <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
                     xmlns:svg="http://www.w3.org/2000/svg">
                     <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
                     <g class="layer">
-                        <title>DO</title>
                         <path
                             d="m147.5,179.5c11,-20 84,11 98,-2c14,-13 6,-125 45,-117c39,8 36,100 57,109c21,9 92,-10 114,-1c22,9 -84,65 -88,75c-4,10 37,82 35,110c-2,28 -94,-81 -103,-80c-9,1 -77,111 -96,94c-19,-17 36,-104 26,-119c-10,-15 -99,-49 -88,-69z"
                             fill="#ff0000" class="vsse_navitem" id="vsse_navitem3" stroke="#f9f4f4"
                             stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
                     </g>
                 </svg>
-                Salary Item
+                <div>Salary Item</div>
             </div>
-            <div class="mainnavitem" id="navitemstatitem">
+            <div class="mainnavitem" id="navitemsalarystruct">
                 <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
                     xmlns:svg="http://www.w3.org/2000/svg">
                     <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
                     <g class="layer">
-                        <title>HOW</title>
                         <path
                             d="m194.5,233.5c8,83 76,149 126,149c50,0 135,-66 134,-77c-1,-11 -105,-30 -111,-86c-6,-56 72,-104 72,-97c0,7 -83,-57 -130,-50c-47,7 -99,78 -91,161z"
                             fill="#ff0000" class="vsse_navitem" id="vsse_navitem4" stroke="#f9f4f4"
                             stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
                     </g>
                 </svg>
-                Statutory Item
+                <div>Salary Structure</div>
+            </div>
+            <div class="mainnavitem" id="navitemstatitem">
+                <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:svg="http://www.w3.org/2000/svg">
+                    <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
+                    <g class="layer">
+                        <path
+                            d="m194.5,233.5c8,83 76,149 126,149c50,0 135,-66 134,-77c-1,-11 -105,-30 -111,-86c-6,-56 72,-104 72,-97c0,7 -83,-57 -130,-50c-47,7 -99,78 -91,161z"
+                            fill="#ff0000" class="vsse_navitem" id="vsse_navitem4" stroke="#f9f4f4"
+                            stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
+                    </g>
+                </svg>
+                <div>Statutory Item</div>
             </div>
             <div class="mainnavitem" id="navitemprocess">
                 <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
                     xmlns:svg="http://www.w3.org/2000/svg">
                     <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
                     <g class="layer">
-                        <title>DID</title>
                         <path
                             d="m358.5,48.5c66,13 139,224 132,241c-7,17 -196,118 -243,102c-47,-16 -124,-163 -117,-202c7,-39 162,-154 228,-141z"
                             fill="#ff0000" class="vsse_navitem" id="vsse_navitem5" stroke="#f9f4f4"
                             stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
                     </g>
                 </svg>
-                Process
+                <div>Process</div>
+            </div>
+            <div class="mainnavitem" id="navitemoutput">
+                <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:svg="http://www.w3.org/2000/svg">
+                    <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
+                    <g class="layer">
+                        <path
+                            d="m358.5,48.5c66,13 139,224 132,241c-7,17 -196,118 -243,102c-47,-16 -124,-163 -117,-202c7,-39 162,-154 228,-141z"
+                            fill="#ff0000" class="vsse_navitem" id="vsse_navitem5" stroke="#f9f4f4"
+                            stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
+                    </g>
+                </svg>
+                <div>Output</div>
             </div>
         </div>
 
@@ -85,19 +108,21 @@
             <div id="contentlist">
                 <div id="listtitle">List Title</div>
                 <div id="listtable"></div>
-                <div id = listfunction></div>
+                <div id=listfunction></div>
             </div>
 
             <div id="contentdetail">
-                <svg id="contentdetaillogo" viewBox="0 0 600 600" width="500" height="500"
-                    xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
-                    <g class="layer">
-                        <path
-                            d="m152.5,99.5c30,-31 98,-73 124,-36c26,37 6,104 37,114c31,10 72,-104 112,-113c40,-9 87,78 100,116c13,38 -4,77 -34,96c-30,19 -75,-15 -83,8c-8,23 62,36 47,74c-15,38 -80,83 -116,65c-36,-18 -10,-53 -32,-86c-22,-33 -79,43 -110,32c-31,-11 -76,-31 -82,-90c-6,-59 74,-44 91,-74c17,-30 -84,-75 -54,-106z"
-                            fill="#ff0000" id="contentdetaillogopath" stroke="#f9f4f4" stroke-dasharray="null"
-                            stroke-linecap="null" stroke-linejoin="null" stroke-width="5" />
-                    </g>
-                </svg>
+                <div id="contentdetaillogo">
+                    <svg viewBox="0 0 600 600" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:svg="http://www.w3.org/2000/svg">
+                        <g class="layer">
+                            <path
+                                d="m152.5,99.5c30,-31 98,-73 124,-36c26,37 6,104 37,114c31,10 72,-104 112,-113c40,-9 87,78 100,116c13,38 -4,77 -34,96c-30,19 -75,-15 -83,8c-8,23 62,36 47,74c-15,38 -80,83 -116,65c-36,-18 -10,-53 -32,-86c-22,-33 -79,43 -110,32c-31,-11 -76,-31 -82,-90c-6,-59 74,-44 91,-74c17,-30 -84,-75 -54,-106z"
+                                fill="#ff0000" id="contentdetaillogopath" stroke="#f9f4f4" stroke-dasharray="null"
+                                stroke-linecap="null" stroke-linejoin="null" stroke-width="5" />
+                        </g>
+                    </svg>
+                </div>
             </div>
 
         </div>
